; ModuleID = '/home/carl/AnghaBench/reactos/modules/rostests/winetests/shdocvw/extr_shdocvw.c_init_functions.c'
source_filename = "/home/carl/AnghaBench/reactos/modules/rostests/winetests/shdocvw/extr_shdocvw.c_init_functions.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [12 x i8] c"shdocvw.dll\00", align 1
@hshdocvw = common dso_local global i32 0, align 4
@pURLSubRegQueryA = common dso_local global i8* null, align 8
@pParseURLFromOutsideSourceA = common dso_local global i8* null, align 8
@pParseURLFromOutsideSourceW = common dso_local global i8* null, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void ()* @init_functions to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @init_functions() #0 {
  %1 = call i32 @LoadLibraryA(i8* getelementptr inbounds ([12 x i8], [12 x i8]* @.str, i64 0, i64 0))
  store i32 %1, i32* @hshdocvw, align 4
  %2 = load i32, i32* @hshdocvw, align 4
  %3 = call i64 @GetProcAddress(i32 %2, i32 151)
  %4 = inttoptr i64 %3 to i8*
  store i8* %4, i8** @pURLSubRegQueryA, align 8
  %5 = load i32, i32* @hshdocvw, align 4
  %6 = call i64 @GetProcAddress(i32 %5, i32 169)
  %7 = inttoptr i64 %6 to i8*
  store i8* %7, i8** @pParseURLFromOutsideSourceA, align 8
  %8 = load i32, i32* @hshdocvw, align 4
  %9 = call i64 @GetProcAddress(i32 %8, i32 170)
  %10 = inttoptr i64 %9 to i8*
  store i8* %10, i8** @pParseURLFromOutsideSourceW, align 8
  ret void
}

declare dso_local i32 @LoadLibraryA(i8*) #1

declare dso_local i64 @GetProcAddress(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
